package uk.gov.justice.digital.hmpps.approvedpremisesapi.api.model

import com.fasterxml.jackson.annotation.JsonProperty
import io.swagger.v3.oas.annotations.media.Schema

data class Bed(

  @get:JsonProperty("id", required = true) val id: java.util.UUID,

  @get:JsonProperty("name", required = true) val name: String,

  @Schema(example = "NEABC04", description = "")
  @get:JsonProperty("code") val code: String? = null,

  @Schema(example = "Sat Mar 30 00:00:00 GMT 2024", description = "End date of the bed availability, open for availability if not specified")
  @get:JsonProperty("bedEndDate") val bedEndDate: java.time.LocalDate? = null,
)
